# Razer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/Razer/: Razer.h  backend.h  perspective.h  primitives.h
engine/include/Razer/misc/: misc.h
engine/src/: backend.c  native_camera.c  perspective.c  primitives.c
engine/src/misc/: misc.c
src/: main.c  model.c
src/engine/: backend.c  primitives.c
src/engine/misc/: misc.c
src/gfx/: backend.c  backend.h  camera.c  camera.h  gfx.h  object.c  object.h  objects.c  objects.h  prim.c  prim.h  primitives.c  primitives.h  render.c  render.h  scene.c  scene.h  typedef.h  window.c  window.h
src/gfx/math/: ivec2.c  ivec2.h  ivec3.c  ivec3.h  ivec4.c  ivec4.h  mat3.c  mat3.h  mat4.c  mat4.h  maths.c  maths.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
test/: cubevs.txt  main.c  model.c  model.h
